syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/Qitmeer/qng/p2p/proto/v1/gogo.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/message.proto";

message GetBlockDatas {
  repeated Hash locator =1 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

message BlockDatas {
  repeated BlockData locator =1 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

message BlockData {
  bytes blockBytes = 100 [(gogoproto.moretags) = "ssz-max:\"1048576\""];
}

message BroadcastBlock {
  BlockData block =1;
}