syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/Qitmeer/qng/p2p/proto/v1/gogo.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/message.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/graphstate.proto";

message SyncDAG {
  repeated Hash mainLocator =1 [(gogoproto.moretags) = "ssz-max:\"32\""];
  GraphState graphState = 2;
}

message SubDAG {
  Hash syncPoint =1;
  GraphState graphState = 2;
  repeated Hash blocks =3 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

message ContinueSyncDAG {
  Hash syncPoint =1;
  Hash start =2;
}